Updated to the latest Linq to examine

--- a/LinqToExamine.Sandbox/Web.config
+++ b/LinqToExamine.Sandbox/Web.config
@@ -68,10 +68,7 @@
     </mailSettings>
   </system.net>
   <system.web>
-    <globalization
-           culture="en-GB"
-           uiCulture="en-GB"
-        />
+    <globalization culture="en-GB" uiCulture="en-GB" />
     <customErrors mode="RemoteOnly" />
     <trace enabled="false" requestLimit="10" pageOutput="false" traceMode="SortByTime" localOnly="true" />
     <httpRuntime executionTimeout="800" requestValidationMode="2.0" enableVersionHeader="false" targetFramework="4.5" maxRequestLength="1048576" fcnMode="Single" />
